[metadata]
name = nexgen
version = 0.3.0
description = Next Generation Nexus Generator
long_description = file: README.rst
author = Diamond Light Source - Scientific Software
author_email = scientificsoftware@diamond.ac.uk
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    dials
    nexus
project-urls =
    Documentation = https://nexgen.readthedocs.io/
    GitHub = https://github.com/dials/nexgen
    Bug-Tracker = https://github.com/dials/nexgen/issues

[options]
include_package_data = True
install_requires =
    freephil
    h5py
    numpy
packages = find:
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
libtbx.precommit =
    nexgen = nexgen
