[metadata]
name = nexgen
version = 0.6.21
description = Next Generation Nexus Generator
long_description = file: README.rst
author = Diamond Light Source - Scientific Software
author_email = data_analysis@diamond.ac.uk
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    dials
    nexus
project-urls =
    Documentation = https://nexgen.readthedocs.io/
    GitHub = https://github.com/dials/nexgen
    Bug-Tracker = https://github.com/dials/nexgen/issues

[options]
include_package_data = True
install_requires =
    freephil
    h5py
    hdf5plugin>=4.0.1
    numpy
    pint
    importlib_resources>=1.1
    scanspec
    dataclasses-json
packages = find:
package_dir =
    =src
python_requires = >=3.8
zip_safe = False

[options.extras_require]
dev = 
    black
    pytest-cov
    pytest-random-order
    ipython
    pre-commit
    flake8
    build

[options.packages.find]
where = src

[options.entry_points]
libtbx.precommit =
    nexgen = nexgen
console_scripts =
    generate_nexus = nexgen.command_line.nexus_generator:main
    copy_nexus = nexgen.command_line.copy_nexus:main
    nexgen_phil = nexgen.command_line.phil_files_cli:main
    I19_nexus = nexgen.command_line.I19_2_cli:main
    ED_nexus = nexgen.command_line.ED_nexus:main
    SSX_nexus = nexgen.command_line.SSX_cli:main